@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.9'
+    id 'edu.sc.seis.launch4j' version '2.4.9'
 }
 
 sourceCompatibility = 14
@@ -46,13 +47,11 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
-    jvmArgs '--enable-preview'
+launch4j {
+    mainClassName = 'alexskxy.transportfinder.Main'
 }
 
-test{
-    failFast = false
+tasks.named('test') {
     useJUnitPlatform()
     jvmArgs '--enable-preview'
 }
